--- a/.github/workflows/playwright-ci.yml
+++ b/.github/workflows/playwright-ci.yml
@@ -12,7 +12,7 @@ jobs:
     defaults:
       run:
         # This path has been updated
-        working-directory: playwright_ts_api_test
+        working-directory: playwright-ts-api-test
     strategy:
       matrix:
         node-version: [18.x]
@@ -38,4 +38,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: playwright-report
-          path: playwright_ts_api_test/playwright-report
+          path: playwright-ts-api-test/playwright-report
