--- a/.gitignore
+++ b/.gitignore
@@ -84,12 +84,6 @@ ipython_config.py
 # pyenv
 .python-version
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
 
 # celery beat schedule file
 celerybeat-schedule
@@ -152,3 +146,4 @@ bin/
 # Generic log and output directories
 logs/
 output/
+go-api-tests/weather_test_report.json
