--- a/.github/workflows/elixir_ci.yml
+++ b/.github/workflows/elixir_ci.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Setup Elixir
-      uses: actions/setup-elixir@v1
+      uses: erlef/setup-beam@v1
       with:
         elixir-version: "1.16.2"
         otp-version: "26"
