--- a/.github/workflows/robot-python-ci.yml
+++ b/.github/workflows/robot-python-ci.yml
@@ -6,7 +6,8 @@ on:
   pull_request:
     branches: [main, master]
   schedule:
-    - cron: '0 4 * * *'  
+    - cron: '0 4 * * *'
+
 env:
   TESTS_DIR: robot-framework-python-tests
   ALLURE_RESULTS: allure-results
@@ -14,7 +15,7 @@ env:
 
 jobs:
   lint-and-quality:
-    name: Lint and Code Quality
+    name: Lint & Quality Gate
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -31,13 +32,11 @@ jobs:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('${{ env.TESTS_DIR }}/requirements*.txt') }}
 
-      - name: Install dependencies
-        working-directory: ${{ env.TESTS_DIR }}
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -r requirements-dev.txt
-          pip install allure-pytest
+      - name: Install dependencies (composite action)
+        uses: ./.github/actions/install-python-deps
+        with:
+          python-version: "3.10"
+          tests-dir: ${{ env.TESTS_DIR }}
 
       - name: Run Robocop Lint
         working-directory: ${{ env.TESTS_DIR }}
@@ -48,31 +47,24 @@ jobs:
         run: black --check .
 
   api-tests:
-    name: API Tests
+    name: Test: API Suite
     runs-on: ubuntu-latest
     needs: lint-and-quality
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
-
-      - name: Restore pip cache
+      - name: Cache pip dependencies
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('${{ env.TESTS_DIR }}/requirements*.txt') }}
 
-      - name: Install dependencies
-        working-directory: ${{ env.TESTS_DIR }}
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -r requirements-dev.txt
-          pip install allure-pytest
+      - name: Install dependencies (composite action)
+        uses: ./.github/actions/install-python-deps
+        with:
+          python-version: "3.10"
+          tests-dir: ${{ env.TESTS_DIR }}
 
       - name: Run API tests with Allure
         working-directory: ${{ env.TESTS_DIR }}
@@ -84,37 +76,31 @@ jobs:
             tests/api_tests
 
       - name: Upload API test results
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: api-pabot-report
           path: ${{ env.TESTS_DIR }}/reports/api_pabot
 
   gui-visual-tests:
-    name: GUI & Visual Tests
+    name: Test: GUI & Visual Suite
     runs-on: ubuntu-latest
     needs: lint-and-quality
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
-
-      - name: Restore pip cache
+      - name: Cache pip dependencies
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('${{ env.TESTS_DIR }}/requirements*.txt') }}
 
-      - name: Install dependencies
-        working-directory: ${{ env.TESTS_DIR }}
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -r requirements-dev.txt
-          pip install allure-pytest
+      - name: Install dependencies (composite action)
+        uses: ./.github/actions/install-python-deps
+        with:
+          python-version: "3.10"
+          tests-dir: ${{ env.TESTS_DIR }}
 
       - name: Run GUI & Visual tests with Allure
         working-directory: ${{ env.TESTS_DIR }}
@@ -125,50 +111,45 @@ jobs:
             tests/gui_tests tests/visual_tests
 
       - name: Upload GUI & Visual test results
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: gui-visual-report
           path: ${{ env.TESTS_DIR }}/reports/gui_visual_results
 
   unit-tests:
-    name: Pytest Unit Tests
+    name: Test: Pytest Unit Suite
     runs-on: ubuntu-latest
     needs: lint-and-quality
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
-
-      - name: Restore pip cache
+      - name: Cache pip dependencies
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('${{ env.TESTS_DIR }}/requirements*.txt') }}
 
-      - name: Install dependencies
-        working-directory: ${{ env.TESTS_DIR }}
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -r requirements-dev.txt
-          pip install allure-pytest
+      - name: Install dependencies (composite action)
+        uses: ./.github/actions/install-python-deps
+        with:
+          python-version: "3.10"
+          tests-dir: ${{ env.TESTS_DIR }}
 
       - name: Run Pytest unit tests with Allure
         working-directory: ${{ env.TESTS_DIR }}
         run: pytest --alluredir=${{ env.ALLURE_RESULTS }} pytest_unit
 
       - name: Upload unit test results
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: pytest-unit-report
           path: ${{ env.TESTS_DIR }}/pytest_unit
 
   generate-allure-report:
-    name: Generate & Upload Allure Report
+    name: Reporting: Allure Merge & Upload
     runs-on: ubuntu-latest
     needs: [api-tests, gui-visual-tests, unit-tests]
     steps:
@@ -190,8 +171,9 @@ jobs:
         with:
           report_path: ${{ env.TESTS_DIR }}/${{ env.ALLURE_REPORT }}
           results_path: ${{ env.TESTS_DIR }}/${{ env.ALLURE_RESULTS }}
-        
+
       - name: Upload Allure Report Artifact
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: ${{ env.ALLURE_REPORT }}
