--- a/csharp-specflow-api-tests/SpecFlowApiTests.csproj
+++ b/csharp-specflow-api-tests/SpecFlowApiTests.csproj
@@ -31,6 +31,7 @@
 
     <PackageReference Include="Bogus" Version="35.6.3" />
     <PackageReference Include="FluentAssertions" Version="8.3.0" />
+    <PackageReference Include="Microsoft.TestPlatform.Extensions.Logger.Json" Version="17.4.0" />
 
   </ItemGroup>
 
