--- a/.github/workflows/elixir_ci.yml
+++ b/.github/workflows/elixir_ci.yml
@@ -7,6 +7,9 @@ on:
   pull_request:
     branches:
       - main
+  schedule:
+    - cron: '30 3 * * *' # 03:30 UTC
+  workflow_dispatch:
 
 jobs:
   test_and_report:
@@ -49,3 +52,6 @@ jobs:
           elixir-api-tests/logs/
           elixir-api-tests/snapshots/
           elixir-api-tests/reports/
+    - name: Elixir Report Download Instructions
+      run: |
+        echo "Download the 'elixir-reports' artifact from the Actions run and view the HTML report locally."
