--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -5,6 +5,9 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  schedule:
+    - cron: '0 4 * * *' # 04:00 UTC
+  workflow_dispatch:
 
 jobs:
   build-test:
@@ -17,7 +20,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: '17'
+          java-version: '21'
 
       - name: Build and Test
         working-directory: java-event-driven-tests
@@ -29,3 +32,6 @@ jobs:
         with:
           name: surefire-reports
           path: java-event-driven-tests/target/surefire-reports
+      - name: Java Report Download Instructions
+        run: |
+          echo "Download the 'surefire-reports' artifact from the Actions run and view the HTML report locally."
