--- a/.github/workflows/k6-ci.yml
+++ b/.github/workflows/k6-ci.yml
@@ -5,6 +5,8 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  schedule:
+    - cron: '45 3 * * *' # 03:45 UTC
   workflow_dispatch:
 
 jobs:
@@ -13,15 +15,16 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
       - name: Run local k6 test
         uses: grafana/k6-action@v0.2.0
         with:
           filename: k6-performance-tests/smoke-test.js
-
       - name: Upload k6 summary
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: k6-summary
           path: k6-performance-tests/summary.html
+      - name: k6 Report Download Instructions
+        run: |
+          echo "Download the 'k6-summary' artifact from the Actions run and view summary.html locally."
