--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -5,6 +5,8 @@ on:
     branches: [main]
     paths:
       - 'docs/**'
+  schedule:
+    - cron: '0 5 * * *' # 05:00 UTC
   workflow_dispatch:
 
 permissions:
