--- a/.github/workflows/playwright-ci.yml
+++ b/.github/workflows/playwright-ci.yml
@@ -5,6 +5,9 @@ on:
     branches: [main, master]
   pull_request:
     branches: [main, master]
+  schedule:
+    - cron: '45 4 * * *' # 04:45 UTC
+  workflow_dispatch:
 
 jobs:
   test:
@@ -15,7 +18,7 @@ jobs:
         working-directory: playwright-ts-api-test
     strategy:
       matrix:
-        node-version: [18.x]
+        node-version: [20.x]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -48,3 +51,6 @@ jobs:
         with:
           name: playwright-report
           path: playwright-ts-api-test/playwright-report
+      - name: Playwright Report Download Instructions
+        run: |
+          echo "Download the 'playwright-report' artifact from the Actions run and view the HTML report locally."
