--- a/.github/workflows/robot-python-ci.yml
+++ b/.github/workflows/robot-python-ci.yml
@@ -4,7 +4,8 @@ on:
   push:
   pull_request:
   schedule:
-    - cron: '0 4 * * *'
+    - cron: '0 4 * * *' # 04:00 UTC
+  workflow_dispatch:
 
 env:
   TESTS_DIR: robot-framework-python-tests
@@ -22,7 +23,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: "3.11"
 
       - name: Cache pip dependencies
         uses: actions/cache@v4
@@ -33,7 +34,7 @@ jobs:
       - name: Install dependencies (composite action)
         uses: ./.github/actions/install-python-deps
         with:
-          python-version: "3.10"
+          python-version: "3.11"
           tests-dir: ${{ env.TESTS_DIR }}
 
       - name: Run Robocop Lint
@@ -48,6 +49,11 @@ jobs:
     name: "Test: API Suite"
     runs-on: ubuntu-latest
     needs: lint-and-quality
+    env:
+      # Add API secrets here if needed for authentication
+      API_TOKEN: ${{ secrets.API_TOKEN }}
+      API_USERNAME: ${{ secrets.API_USERNAME }}
+      API_PASSWORD: ${{ secrets.API_PASSWORD }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -61,7 +67,7 @@ jobs:
       - name: Install dependencies (composite action)
         uses: ./.github/actions/install-python-deps
         with:
-          python-version: "3.10"
+          python-version: "3.11"
           tests-dir: ${{ env.TESTS_DIR }}
 
       - name: Run API tests with Allure
@@ -72,6 +78,14 @@ jobs:
             --alluredir ${{ env.ALLURE_RESULTS }} \
             --outputdir reports/api_pabot \
             tests/api_tests
+
+      - name: Debug: Print HTTP error responses (if any)
+        if: failure()
+        run: |
+          echo "If you see HTTP 418 or other errors, check that API credentials are set as GitHub secrets."
+          if [ -z "${{ secrets.API_TOKEN }}" ]; then echo "API_TOKEN is not set"; else echo "API_TOKEN is set"; fi
+          if [ -z "${{ secrets.API_USERNAME }}" ]; then echo "API_USERNAME is not set"; else echo "API_USERNAME is set"; fi
+          if [ -z "${{ secrets.API_PASSWORD }}" ]; then echo "API_PASSWORD is not set"; else echo "API_PASSWORD is set"; fi
 
       - name: Upload API test results
         if: always()
@@ -97,7 +111,7 @@ jobs:
       - name: Install dependencies (composite action)
         uses: ./.github/actions/install-python-deps
         with:
-          python-version: "3.10"
+          python-version: "3.11"
           tests-dir: ${{ env.TESTS_DIR }}
 
       - name: Run GUI & Visual tests with Allure
@@ -132,7 +146,7 @@ jobs:
       - name: Install dependencies (composite action)
         uses: ./.github/actions/install-python-deps
         with:
-          python-version: "3.10"
+          python-version: "3.11"
           tests-dir: ${{ env.TESTS_DIR }}
 
       - name: Run Pytest unit tests with Allure
@@ -150,6 +164,7 @@ jobs:
     name: "Reporting: Allure Merge & Upload"
     runs-on: ubuntu-latest
     needs: [api-tests, gui-visual-tests, unit-tests]
+    if: github.event_name != 'pull_request' # Only generate Allure report for push/schedule/manual
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -157,7 +172,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: "3.11"
 
       - name: Download all test results
         uses: actions/download-artifact@v4
@@ -169,7 +184,11 @@ jobs:
         with:
           report_path: ${{ env.TESTS_DIR }}/${{ env.ALLURE_REPORT }}
           results_path: ${{ env.TESTS_DIR }}/${{ env.ALLURE_RESULTS }}
-
+      - name: Allure Report Download Instructions
+        run: |
+          echo "Allure report cannot be viewed directly on GitHub."
+          echo "Download the '${{ env.ALLURE_REPORT }}' artifact from the Actions run and view it locally with:"
+          echo "allure open <downloaded-report-directory>"
       - name: Upload Allure Report Artifact
         if: always()
         uses: actions/upload-artifact@v4
