--- a/csharp-specflow-api-tests/SpecFlowApiTests.csproj
+++ b/csharp-specflow-api-tests/SpecFlowApiTests.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="NUnit3TestAdapter" Version="5.0.0" />
     <PackageReference Include="NUnit.Analyzers" Version="4.9.2" />
     <PackageReference Include="coverlet.collector" Version="6.0.4" />
+    <PackageReference Include="Polly" Version="8.6.1" />
     <PackageReference Include="RestSharp" Version="112.1.0" />
     <PackageReference Include="Serilog" Version="4.3.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
