--- a/java-event-driven-tests/pom.xml
+++ b/java-event-driven-tests/pom.xml
@@ -36,7 +36,6 @@
       <artifactId>jedis</artifactId>
       <version>6.0.0</version>
     </dependency>
-
     <dependency>
         <groupId>org.testng</groupId>
         <artifactId>testng</artifactId>
@@ -66,6 +65,21 @@
       <artifactId>redpanda</artifactId>
       <version>${testcontainers.version}</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.15.3</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>2.15.3</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+      <version>2.15.3</version>
     </dependency>
   </dependencies>
   <build>
