Enhance CI workflow and improve EventDrivenTest setup
- Added Docker checks to the CI workflow to ensure Docker is running.
- Refactored EventDrivenTest setup to handle Docker network creation and Redis connection more robustly.
- Updated TestKafkaProducer constructor and method documentation for clarity.

--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -22,6 +22,11 @@ jobs:
           distribution: temurin
           java-version: '21'
 
+      - name: Ensure Docker is running
+        run: |
+          docker info
+          docker version
+
       - name: Build and Test
         working-directory: java-event-driven-tests
         run: mvn clean test -DsuiteXmlFile=testng-integration-suite.xml
