Add test reports and resources for Event Driven Integration Tests
- Added skipped.png to represent skipped tests in reports.
- Created testng-failed.xml to log failed test cases in the EventDrivenIntegrationSuite.
- Introduced testng-reports.css for styling the TestNG reports.
- Implemented testng-reports.js for interactive report functionalities.
- Added testng-reports1.css for an alternative styling theme.
- Developed testng-reports2.js to manage theme switching in reports.
- Generated testng-results.xml to capture the results of the integration tests, including failures and skips.

--- a/java-event-driven-tests/pom.xml
+++ b/java-event-driven-tests/pom.xml
@@ -9,6 +9,8 @@
     <testcontainers.version>1.21.2</testcontainers.version>
     <testng.version>7.11.0</testng.version>
     <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
   </properties>
   <dependencies>
     <dependency>
@@ -87,6 +89,7 @@
         <plugin>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-maven-plugin</artifactId>
+            <version>${spring-boot.version}</version>
         </plugin>
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
