Enhance Java CI workflow with concurrency controls, explicit timeouts, and improved artifact handling

--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -9,9 +9,23 @@ on:
     - cron: '0 4 * * *' # 04:00 UTC
   workflow_dispatch:
 
+# Add concurrency controls to prevent redundant builds
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: ${{ startsWith(github.ref, 'refs/pull/') }}
+
 jobs:
   build-test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04  # Pin to specific version instead of ubuntu-latest
+    timeout-minutes: 30    # Add explicit timeout
+    
+    # Restrict workflow permissions for security
+    permissions:
+      contents: read
+      actions: read
+      checks: write
+      pull-requests: write
+      
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -21,6 +35,14 @@ jobs:
         with:
           distribution: temurin
           java-version: '21'
+          cache: maven  
+      
+      - name: Cache Maven dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
 
       - name: Ensure Docker is running
         run: |
@@ -35,8 +57,22 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: surefire-reports
+          name: surefire-reports-${{ github.run_id }}  # Make artifact names unique
           path: java-event-driven-tests/target/surefire-reports
+          retention-days: 30  # Explicit retention period
+          if-no-files-found: warn  # Explicit behavior for missing files
+          
       - name: Java Report Download Instructions
+        if: always()
         run: |
-          echo "Download the 'surefire-reports' artifact from the Actions run and view the HTML report locally."
+          echo "Download the 'surefire-reports-${{ github.run_id }}' artifact from the Actions run and view the HTML report locally."
+      
+      - name: Publish Test Results
+        uses: dorny/test-reporter@v1.9.1  # Pin to specific version for security
+        if: success() || failure()
+        with:
+          name: Maven Tests
+          path: java-event-driven-tests/target/surefire-reports/*.xml
+          reporter: java-junit
+          fail-on-error: false  # Don't fail the workflow if test reporter fails
+          max-annotations: 10   # Limit annotations to avoid clutter
