--- a/java-event-driven-tests/pom.xml
+++ b/java-event-driven-tests/pom.xml
@@ -4,6 +4,9 @@
   <artifactId>event-driven-test-suite</artifactId>
   <version>1.0-SNAPSHOT</version>
   <properties>
+    
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
     <java.version>21</java.version>
     <spring-boot.version>3.5.3</spring-boot.version>
     <testcontainers.version>1.21.2</testcontainers.version>
